log.txt
file.c: In function ‘main’:
file.c:5:5: error: ‘a’ undeclared (first use in this function)
    5 |     a
      |     ^
file.c:5:5: note: each undeclared identifier is reported only once for each function it appears in
file.c:5:6: error: expected ‘;’ before ‘}’ token
    5 |     a
      |      ^
      |      ;
    6 | }
      | ~     
